--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: android-actions/setup-android@v2
-
-    - uses: actions/setup-java@v3
+    - uses: android-actions/setup-android@v3
       with:
-        java-version: 17
+        cmdline-tools-version: 9477386
+
+    - uses: actions/setup-java@v4
+      with:
+        java-version: 21
         distribution: 'adopt'
 
     - name: Set up environment variables
@@ -21,7 +23,7 @@ jobs:
         echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
 
     - name: Checkout mupen64plus-ae repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
@@ -48,7 +50,7 @@ jobs:
 
     - name: Declare branch name
       id: branch-name
-      uses: tj-actions/branch-names@v6
+      uses: tj-actions/branch-names@v8
 
     - name: Get branch name
       id: var
@@ -56,7 +58,7 @@ jobs:
         echo "branch=${{ steps.branch-name.outputs.current_branch }}" >> $GITHUB_OUTPUT
 
     - name: Declare sha name
-      uses: benjlevesque/short-sha@v2.1
+      uses: benjlevesque/short-sha@v3.0
       id: short-sha
       with:
         length: 7
@@ -68,7 +70,7 @@ jobs:
         SHA: ${{ steps.short-sha.outputs.sha }}
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: mupen64plus-ae-${{ steps.var.outputs.branch }}-${{ env.SHA }}
         path: ${{ github.workspace }}/app/build/outputs/apk/release/Mupen64PlusAE-release.apk
@@ -81,18 +83,18 @@ jobs:
 
     steps:
     - name: Checkout mupen64plus-ae repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
     - name: Download Artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         path: dist
 
     - name: Declare branch name
       id: branch-name
-      uses: tj-actions/branch-names@v6
+      uses: tj-actions/branch-names@v8
 
     - name: Get branch name
       id: var
@@ -100,7 +102,7 @@ jobs:
         echo "branch=${{ steps.branch-name.outputs.current_branch }}" >> $GITHUB_OUTPUT
 
     - name: Declare sha name
-      uses: benjlevesque/short-sha@v2.1
+      uses: benjlevesque/short-sha@v3.0
       id: short-sha
       with:
         length: 7
